# slm_server

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  run_platform.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_request.md
local_llm_platform/apps/admin_cli/: cli.py
local_llm_platform/apps/desktop/: api_client.py  app.py  sidebar.py
local_llm_platform/apps/gateway_api/: main.py
local_llm_platform/apps/runtime_manager/: main.py
local_llm_platform/apps/trainer_worker/: main.py
local_llm_platform/core/config/: settings.py
local_llm_platform/core/exceptions/: errors.py
local_llm_platform/core/logging/: logger.py
local_llm_platform/core/schemas/: chat.py  completion.py  models.py  training.py
local_llm_platform/core/security/: auth.py
local_llm_platform/db/: models.py
local_llm_platform/runtimes/: base.py  llama_cpp_runtime.py  remote_http_runtime.py  remote_ssh_runtime.py  tgi_runtime.py  transformers_runtime.py  vllm_runtime.py
local_llm_platform/services/adapter/: __init__.py  adapter_manager.py
local_llm_platform/services/artifacts/: __init__.py  artifact_manager.py
local_llm_platform/tests/: test_api.py  test_core.py  test_integration.py  test_production.py  test_registry.py  test_schemas.py  test_services.py
local_llm_platform/training/: base.py  colab_trainer.py  import_trainer.py  local_trainer.py  remote_trainer.py
(+38 files in other folders)
