[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-platform"
version = "0.1.0"
description = "Privacy-first AI agent platform. Run specialized SLMs locally with a single OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "click>=8.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
training = [
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "trl>=0.7.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
]
huggingface = [
    "huggingface_hub>=0.20.0",
]
runtimes = [
    "llama-cpp-python>=0.2.0",
]
monitoring = [
    "prometheus-client>=0.20.0",
]
desktop = [
    "customtkinter>=5.2.0",
    "CTkMessagebox>=2.5",
    "pillow>=10.0",
    "psutil>=5.9.0",
]
all = [
    "local-llm-platform[training,runtimes,monitoring,desktop]",
]

[project.scripts]
llp = "local_llm_platform.apps.admin_cli.cli:main"
slm-ui = "local_llm_platform.apps.desktop.app:main"

[tool.setuptools.packages.find]
include = ["local_llm_platform*"]
